# ceres-solver-learning

./: README.md
ceres_icp/: CMakeLists.txt
ceres_icp/include/: matcher.h  reprojection3d.h
ceres_icp/src/: ceres_icp.cpp  matcher.cpp
ceres_pnp/: CMakeLists.txt
ceres_pnp/include/: matcher.h  reprojection_factor.h
ceres_pnp/src/: ceres_pnp.cpp  matcher.cpp
